--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
   "name": "qoq-helmet",
-  "version": "0.0.2",
-  "main": "index.lib.js",
-  "module": "index.es.js",
-  "typings": "index.d.ts",
+  "version": "0.0.5",
+  "main": "./lib/index.js",
+  "module": "./es/index.js",
   "repository": "git@github.com:qoq-ts/qoq-helmet.git",
   "author": "原罪 <531362022@qq.com>",
   "license": "MIT",
   "engines": {
-    "node": ">=10.17.0"
+    "node": "^14.15.0"
+  },
+  "exports": {
+    ".": {
+      "require": "./lib/index.js",
+      "import": "./es/index.js"
+    },
+    "./": "./"
+  },
+  "scripts": {
+    "prepublishOnly": "ts-prepublish"
   },
   "peerDependencies": {
     "qoq": ">=0.1.0"
@@ -18,15 +27,16 @@
     "koa-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "@types/node": "^14.14.37",
-    "qoq": "^0.0.25",
-    "typescript": "^4.2.3"
+    "@types/node": "^15.6.0",
+    "prettier": "^2.3.0",
+    "qoq": "^0.0.55",
+    "ts-prepublish": "^1.0.0",
+    "typescript": "^4.2.4"
   },
   "files": [
     "package.json",
-    "index.d.ts",
-    "index.es.js",
-    "index.lib.js",
+    "es",
+    "lib",
     "README.md",
     "LICENSE"
   ]
